syntax = "proto3";

package search.v1;

option go_package = "github.com/example/anime-platform/gen/search/v1;searchv1";

message SearchAnimeRequest {
  string query = 1;
  int32 limit = 2;
  int32 offset = 3;
  repeated string genres = 4;
  string status = 5;
  string type = 6;
  float min_score = 7;
  float max_score = 8;
}

message SearchAnimeResponse {
  repeated AnimeHit hits = 1;
  int32 total = 2;
}

message AnimeHit {
  string anime_id = 1;
  string title = 2;
  string title_english = 3;
  string title_japanese = 4;
  string image = 5;
  string description = 6;
  repeated string genres = 7;
  float score = 8;
  string status = 9;
  string type = 10;
  int32 total_episodes = 11;
}

service SearchService {
  rpc SearchAnime(SearchAnimeRequest) returns (SearchAnimeResponse);
}
